StringUtils isBlank to nullToEmpty.isBlank